--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@fontsource/lato": "^4.5.10",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.11.0",
+    "@radix-ui/react-avatar": "^1.0.2",
+    "@radix-ui/react-scroll-area": "^1.0.3",
+    "@radix-ui/react-separator": "^1.0.2",
     "@tanstack/react-query": "^4.28.0",
     "@trpc/client": "^10.18.0",
     "@trpc/next": "^10.18.0",
