--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "@trpc/server": "^10.18.0",
     "class-variance-authority": "^0.5.2",
     "clsx": "^1.2.1",
+    "dayjs": "^1.11.7",
     "lucide-react": "^0.144.0",
     "next": "^13.2.4",
     "next-auth": "^4.21.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-textarea-autosize": "^8.4.1",
     "socket.io-client": "^4.6.1",
     "superjson": "1.12.2",
     "tailwind-merge": "^1.12.0",
